<resources>
    <string name="app_name">CookMate</string>
    <string name="cookmate_logo">CookMate Logo</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="already_registered_login_here">Already registered? Login here</string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_title">Recipe Title</string>
</resources>